fixed form text area middle align thing

--- a/source/stylesheets/_partials/_style.scss
+++ b/source/stylesheets/_partials/_style.scss
@@ -129,17 +129,20 @@ form{
 		height: 3em;
 		font-family: $cutive;
 		font-size: 1.25em;
-		padding: 5px;
-	}
+		padding-left: 5px;
+		
+			}
 	textarea{
 		border: 2px solid $brown;
 		width: 100%;
 		background-color: rgba(255,255,255,0.5);
 		font-family: $cutive;
 		font-size: 1.25em;
+		line-height: 1.3em;
 		text-align: left;
 		padding: 5px;
 	}
+	
 	.submit{
 		background-color: $brown;
 		border: 2px solid $black;
